[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boto-model-py"
version = "0.1.1"
description = "A code generation library that converts AWS boto3 responses into a Python module with fully hierarchical Python data classes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic < 3",
    "astor==0.8.1",
    "datamodel-code-generator==0.25.7"
]
license = { text = "MIT" }


[tool.hatch.build]
include = ["src/**", "README.md", "LICENSE"]
exclude = ["__pycache__", "*.pyc", "*.pyo", "*.pyd", "dist", "build"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.scripts]
bmpy = "boto_model_py.cli:main"
